--- a/jobdelas/src/main/resources/templates/jb_company/index.html
+++ b/jobdelas/src/main/resources/templates/jb_company/index.html
@@ -24,7 +24,7 @@
             </button>
           </a>
 
-          <a href="cadastrar/cursos">
+          <a href="jbcompany/cadastrar/aula">
             <button>
               <i class="fas fa-book"></i>
               <p>Cursos</p>
