--- a/jobdelas/src/main/resources/templates/jb_company/cadastrar-aula.html
+++ b/jobdelas/src/main/resources/templates/jb_company/cadastrar-aula.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jb Company</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/css/jbcompany-empresas.css" />
   </head>
   <body>
     <section class="cointaner-principal">
       <div class="menu">
         <nav>
           <a href="/jbcompany"><i class="fas fa-home"></i> Home </a>
-          <a href="/jbcompany/cadastrar/empresas"
-            ><i class="fas fa-building"></i> Cadastrar Empresa</a
+          <a href="/jbcompany/cadastrar/curso"
+            ><i class="fas fa-building"></i> Cadastrar Cursos</a
           >
-          <a href="/jbcompany/cadastrar/vagas"
-            ><i class="fas fa-plus-circle"></i> Cadastrar Vagas</a
+          <a href="/jbcompany/cadastrar/aula"
+            ><i class="fas fa-plus-circle"></i> Cadastrar Aulas</a
           >
-          <a href="/jbcompany/listar/empresas"
-            ><i class="fas fa-list"></i> Listar Empresas
+          <a href="/jbcompany/listar/aula"
+            ><i class="fas fa-search"></i> Buscar Aulas
           </a>
-          <a href="/jbcompany/buscar/empresas"
-            ><i class="fas fa-search"></i> Buscar Empresa</a
-          >
-          <a href="/jbcompany/cadastrar/empresas"
-            ><i class="fas fa-users"></i> Visualizar Candidatos</a
+          <a href="/jbcompany/listar/curso"
+            ><i class="fas fa-list"></i> Listar Cursos</a
           >
         </nav>
         <div class="logo">
@@ -32,7 +29,7 @@
         </div>
       </div>
       <div class="container_aula">
-        <form action="/aulas/adicionar" method="post">
+        <form method="post">
           <h2>Cadastrar Aula</h2>
 
           <label for="curso">Curso:</label>
@@ -57,14 +54,6 @@
         </form>
       </div>
     </section>
-
-    <!-- Lista de Aulas
-    <h2>Lista de Aulas</h2>
-    <ul th:each="aula : ${aulas}">
-        <li th:text="${aula.titulo + ' - ' + aula.curso.materia + ' - ' + aula.curso.descricao}"></li>
-        <a th:href="@{/aulas/editar/{id}(id=${aula.id})}">Editar</a>
-        <a th:href="@{/aulas/deletar/{id}(id=${aula.id})}" onclick="return confirm('Tem certeza que deseja deletar esta aula?')">Deletar</a>
-    </ul> -->
 
     <script
       src="https://kit.fontawesome.com/cda1aa7b4f.js"
