Personalização css chat

--- a/jobdelas/src/main/resources/templates/jb_company/listar-cursos.html
+++ b/jobdelas/src/main/resources/templates/jb_company/listar-cursos.html
@@ -18,10 +18,10 @@
             ><i class="fas fa-plus-circle"></i> Cadastrar Aulas</a
           >
           <a href="/jbcompany/listar/aula"
-            ><i class="fas fa-search"></i> Buscar Aulas
+            ><i class="fas fa-list"></i> Buscar Aulas
           </a>
           <a href="/jbcompany/listar/curso"
-            ><i class="fas fa-list"></i> Listar Cursos</a
+            ><i class="fas fa-search"></i> Listar Cursos</a
           >
         </nav>
         <div class="logo">
