--- a/front-dev/styles.css
+++ b/front-dev/styles.css
@@ -1,361 +1,69 @@
 * {
-    padding: 0;
-    margin:0;
-    list-style: none;
-    text-decoration: none;
-  }
-  
-  body {
-    background: #ffffff;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    height: 100vh; 
-    margin: 0; 
-    overflow: hidden;
-  }
-  
-  
-  
-  /* FORMULARIO =================================== */
-  
-  .cointaner-principal {
-    width: 90%;
-    height: 600px;
-    display: flex;
-    border-radius: 30px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-    border: 1px solid #B378FF ;
-  }
-  
-  .menu {
-    background-color: #B378FF;
-    width: 38%;
-    position: relative;
-    display: flex;
-    border-radius: 30px 0px 0px 30px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-  }
-  
-  .menu nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap:30px;
-  }
-  
-  .menu nav a {
-    color: #fff;
-    font-size: 20px;
-  }
-  
-  .menu nav i {
-    font-size: 25px;
-    margin-right: 10px;
-  }
-  
-  
-  .logo img {
-    width: 170px;
-  }
-  
-  
-  .info_titulo,
-  .info_items {
-    position: relative;
-    z-index: 2;
-    color: #fff;
-  }
-  
-  
-  
-  .info_titulo span {
-    font-size: 100px;
-    display: block;
-    text-align: center;
-  }
-  
-  .info_titulo h2 {
-    font-size: 35px;
-    text-align: center;
-  }
-  
-  .info_items p {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    font-weight: 600;
-  }
-  
-  
-  .empresa {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap:10px;
-  }
-  
-  form.form_corpo {
-    width: 62%;
-    padding: 30px;
-    justify-content: space-around;
-    display: flex;
-    flex-direction: column;
-    gap:20px;
-  }
-  
-  form.form_corpo h2 {
-    text-align: center;
-    font-size: 25px;
-    font-weight: 600;
-    color: #303030;
-  }
-  
-  form.form_corpo .user_info {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  
-  
-  form.form_corpo input,
-  form.form_corpo textarea {
-    width: 100%;
-    padding: 8px 5px 5px;
-    border: 1px solid #B378FF;
-    border-radius: 13px;
-    font-size: 14px;
-    font-weight: 400;
-  }
-  input:focus , textarea:focus{
-    outline: none; 
-  }
-  
-  
-  form.form_corpo textarea {
-    resize: none;
-    min-height: 30px;
-  }
-  
-
-  #area_de_atuacao {
-    margin-top: 20px;
-    border: 1px solid #B378FF;
-    border-radius: 13px;
-    height: 30px;
-  }
-
-
-  
-  #botao-formulario {
-    width: 200px;
-    height: 30px;
-    text-transform: uppercase;
-    background-color: #fff;
-    color: #B378FF;
-    border-radius: 10px;
-    border: 1px solid #B378FF;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  
-  #botao-formulario:hover {
-    background-color: #B378FF;
-    color: #fff;
-  }
-  
-  
-  .esqueceu {
-    text-decoration: none;
-    color: #706273;
-    width: 150px;
-  }
-  
-  .esqueceu:hover {
-    color: #B378FF;
-  }
-  
-  
-  @media (max-width: 768px) {
-    .section-form {
-        flex-direction: column;
-        height: auto;
-    }
-  
-    .cantact_info {
-        width: 100%;
-        order: -1;
-    }
-  
-    .form_corpo {
-        width: 100%;
-    }
-  }
-  
-  .card {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
-    margin: 20px;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    border: 1px solid #B378FF;
-    
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
-.card-content {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-.card-title {
-    font-size: 1.5em;
-    background-color: #B378FF;
-    padding: 5px;
-    color: #fff;
-    width: 100%;
-}
-
-.card-button {
-  background-color: #fff;
-  color: #B378FF;
-   border: 1px solid #B378FF;
-   border-radius: 5px;
-   cursor: pointer;
-   padding: 5px 10px;
-} 
-
-.card-button:hover {
-  background-color: #B378FF;
-  color: #fff;
-}
-
-.form_corpo_cards {
-  width: 62%;
-  padding: 30px;
+body {
+  background: #f2f2f2;
   display: flex;
-  flex-wrap: wrap;
-  overflow-y: auto;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
+  font-family: Arial, sans-serif; /* Exemplo de fonte */
 }
 
-.listar h2 {
-  color: #303030;
-}
-
-
-.card-content p {
-  text-transform: uppercase;
-}
-
-
-/* Vagas abaixo */
-
-select#empresa_id {
+.container-mensagens {
   border: 1px solid #B378FF;
-  height: 30px;
-  margin-top: 5px;
-  border-radius: 13px;
-}
-
-select#status_vaga {
-  border: 1px solid #B378FF;
-  height: 30px;
-  border-radius: 13px;
-}
-
-/* Home do jb company */
-
-.cards-escolha-jbcompany {
+  width: 70%;
+  height: 70vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap:30px;
-  width: 62%;
-  align-items: center;
+  justify-content: space-between;
+  border-radius: 20px;
+  background-color: #fff; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
 }
 
-.cards-escolha-jbcompany h1 {
-  font-size: 35px;
-  color: #B378FF;
-
+.chat {
+  border-radius: 20px;
+  height: 80%;
+  padding: 20px;
+  overflow-y: auto; 
 }
-.cards-escolha-jbcompany button {
-  width: 200px;
-  height: 70px;
+
+.mensagem-recebida {
+  background-color: rgb(241, 216, 255);
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.enviar form {
+  border-radius: 0px 0px 20px 20px;
+  display: flex;
+  padding: 10px;
+  align-items: baseline;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: space-around;
   background-color: #B378FF;
+}
+
+input[type="text"],
+button {
+  padding: 8px;
   border: none;
-  color: #fff;
   border-radius: 5px;
-  padding: 15px;
-
-}
-.cards-escolha-jbcompany button i {
-  font-size: 25px;
-}
-.cards-escolha-jbcompany button p {
-  font-size: 20px;
+  outline: none;
 }
 
-/* Fim do jb company */
-
-
-/* Area Aulas */
-.container_aula {
-  width: 62%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
-.container_aula form {
-  width: 60%;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  gap:2px;
-
-}
-
-.container_aula form h2 {
-  font-size: 35px;
+button {
+  cursor: pointer;
+  background-color: #ffffff;
   color: #B378FF;
-  text-align: center;
-}
-
-.container_aula form input , .container_aula form textarea, .container_aula form select {
-  padding: 8px 5px 5px;
-  border: 1px solid #B378FF;
-  border-radius: 13px;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-
-.container_aula form textarea {
-  resize: none;
-}
-
-.container_aula form button {
-  width: 150px;
-  height: 40px;
-  background-color: #B378FF;
-  color: #fff;
-   border: 1px solid #B378FF;
-   border-radius: 5px;
-   cursor: pointer;
-   align-self: center;
-   padding: 5px 10px;
-}
-
-
-.container_aula form button:hover {
-  background: linear-gradient(to bottom, #B378FF 75%, #fff 25%) !important;
 
 }
-/* Fim area aulas */
