--- a/jobdelas/src/main/resources/static/css/chat.css
+++ b/jobdelas/src/main/resources/static/css/chat.css
@@ -1,62 +1,87 @@
-body {
-    font-family: Arial, sans-serif;
+
+  main {
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.hidden {
-    display: none;
-}
-
-#chatContainer {
-    width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-}
-
-.chatHeader {
-    text-align: center;
-}
-
-#chatMessages {
-    height: 200px;
-    overflow-y: scroll;
-    border: 1px solid #ccc;
-    margin-bottom: 10px;
-    padding: 5px;
-}
-
-.chatInput {
-    display: flex;
-    gap: 5px;
-}
-
-#messageInput {
-    flex: 1;
-}
-
-#popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
     justify-content: center;
-    align-items: center;
-}
-
-.popupContent {
-    background-color: #fff;
+  }
+  
+  .container-mensagens {
+    border: 1px solid #B378FF;
+    width: 70%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 20px;
+    background-color: #fff; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    align-self: c;
+  }
+  
+  .chat {
+    border-radius: 20px;
+    height: 80%;
     padding: 20px;
-    border-radius: 5px;
+    overflow-y: auto; 
+  }
+  .container-separador {
+    display: flex;
+    align-items: center;
+justify-content: center;  
 }
-
-.popupContent h2 {
+  .mensagem-recebida {
+    background-color: rgb(241, 216, 255);
+    border-radius: 10px;
+    padding: 10px;
     margin-bottom: 10px;
-}
+  }
+  
+  .enviar form {
+    border-radius: 0px 0px 20px 20px;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: space-around;
+
+  }
+  .nome-destinario {
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 4px;
+  }
+  
+  .enviar input[type="text"],
+  button {
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid #B378FF;   
+    cursor: pointer;
+
+  }
+
+  .enviar button {
+    background-color: #B378FF;
+    color: #ffffff;
+
+  }
+  
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #B378FF;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #B378FF;
+  }
