--- a/jobdelas/src/main/resources/templates/jobdelas/chat/index.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/chat/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../static/css/chat.css">
-    <script src="../../../static/js/chat/sockjs.min.js"></script>
-    <script src="../../../static/js/chat/stomp.min.js"></script>
-    <script src="../../../static/js/chat/index.js"></script>
-    <title>Job Delas Chat</title>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -22,32 +15,57 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-</head>
-<body>
-    <div id="chatContainer" class="hidden">
-        <div class="chatHeader">
-            <h2>Chat</h2>
+    <link rel="stylesheet" href="/css/styles.css" />
+
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/chat.css" />
+    <title>Mensagens</title>
+  </head>
+
+  <body>
+    <header class="header"></header>
+
+    <main>
+      <div class="container-mensagens">
+        <div class="chat">
+          <div class="mensagem-recebida" th:each="mensagem : ${chat}">
+            <span th:text="${mensagem.nome}" class="nome-destinario"></span>
+            <span th:text="${mensagem.mensagem}"></span>
+          </div>
         </div>
-        <div id="chatMessages"></div>
-        <div class="chatInput">
-            <form onsubmit="sendMessage(event)">
-                <input type="text" id="messageInput" placeholder="Digite sua mensagem">
-                <button type="submit">Enviar</button>
-            </form>
 
+        <div class="enviar">
+          <form action="" method="post" th:action="@{/enviar}">
+            <div class="container-separador">
+              <label for="">Nome:</label>
+              <input type="text" name="nome" id="nome" />
+            </div>
+
+            <div class="container-separador">
+              <label for="">Mensagem: </label>
+              <input
+                type="text"
+                placeholder="Escreva"
+                name="mensagem"
+                id="mensagem"
+                class="escrever-mensagem"
+              />
+            </div>
+
+            <div>
+              <button type="submit">Enviar</button>
+            </div>
+          </form>
         </div>
-    </div>
+      </div>
+    </main>
 
-    <div id="popup" class="hidden">
-        <div class="popupContent">
-            <h2>Digite seu nome:</h2>
-            <input type="text" id="usernameInput">
-            <button onclick="openChat()">Entrar no Chat</button>
-        </div>
-    </div>
-
-    <script src="../../../static/js/chat/index.js" type="module"></script>
-
+    <script src="/js/chat.js" type="module"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -67,5 +85,5 @@
       src="https://kit.fontawesome.com/cda1aa7b4f.js"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
