--- a/jobdelas/src/main/resources/templates/jobdelas/index.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/index.html
@@ -57,59 +57,29 @@
                 <button class="comment-button">
                   <i class="fas fa-comment"></i> Comentar
                 </button>
-                <button
-                  class="read-comments-button"
-                  data-toggle="modal"
-                  th:data-target="'#comentariosModal_' + ${postagem.id}"
-                >
+                <!-- <a
+                  th:href="@{/jobdelas/comentarios/{postId}(postId=${postagem.id})}"
+                  >Learn</a
+                > -->
+
+                <button onclick="exibirComentarios()">
                   <i class="fas fa-eye"></i> Ler Comentários
                 </button>
-
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  th:id="'comentariosModal_' + ${postagem.id}"
-                  tabindex="-1"
-                  role="dialog"
-                  aria-labelledby="comentariosModalLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="comentariosModalLabel">
-                          Comentários
-                        </h5>
-                        <button
-                          type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-label="Fechar"
-                        >
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <!-- Iteração dos comentários -->
-                        <div
-                          th:each="comentario : ${comentarios}"
-                          class="comentario"
-                        >
-                          <p th:text="${comentario.conteudo}"></p>
-                        </div>
-                      </div>
-                      <div class="modal-footer">
-                        <button
-                          type="button"
-                          class="btn btn-secondary"
-                          data-dismiss="modal"
-                        >
-                          Fechar
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+              </div>
+              <div id="secaoComentarios" style="display: none">
+                <ul>
+                  <li th:each="comentario : ${comentarios}">
+                    <p
+                      th:text="'Usuario: ' + ${comentario.comentario.usuarios.nome}"
+                    ></p>
+                    <p
+                      th:text="'ID do Comentário: ' + ${comentario.comentario.conteudo}"
+                    ></p>
+                    <p
+                      th:text="'Data da Postagem: ' + ${comentario.comentario.data_comentario}"
+                    ></p>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -139,41 +109,14 @@
     ></script>
 
     <script>
-      // Escute o evento de clique nos botões "Ler Comentários"
-      document.querySelectorAll(".read-comments-button").forEach((button) => {
-        button.addEventListener("click", function () {
-          // Obtém o ID da postagem associado a este botão
-          const postId = this.getAttribute("data-postid");
-
-          // Aqui você pode usar esse postId para fazer uma requisição AJAX
-          // e buscar os comentários correspondentes à postagem com este ID
-          // Após obter os comentários, você pode exibi-los no modal
-          // (Isso depende de como você planeja buscar os comentários do backend)
-
-          // Exemplo simples de exibição dos comentários (substitua isso pelo seu código real)
-          const modal = document.getElementById("comentariosModal");
-          const comentariosDiv = modal.querySelector(".modal-body");
-
-          // Limpando os comentários existentes no modal
-          comentariosDiv.innerHTML = "";
-
-          // Aqui você adicionaria os comentários correspondentes à postagem ao modal
-          // Você precisará de um método para buscar os comentários do backend e adicionar
-          // o HTML dos comentários à variável "comentariosDiv.innerHTML"
-
-          // Exemplo de adição de um comentário fictício ao modal (substitua isso pelo seu código real)
-          const comentarioHTML = `
-      <div class="comentario">
-        <strong>Nome do Comentador:</strong> Comentário
-        <br />
-        <small>Data do Comentário</small>
-      </div>
-    `;
-
-          // Adicionando o comentário fictício ao modal
-          comentariosDiv.insertAdjacentHTML("beforeend", comentarioHTML);
-        });
-      });
+      function exibirComentarios() {
+        let comentariosSecao = document.getElementById("secaoComentarios");
+        if (comentariosSecao.style.display === "none") {
+          comentariosSecao.style.display = "block";
+        } else {
+          comentariosSecao.style.display = "none";
+        }
+      }
     </script>
   </body>
 </html>
