Style: arrumando o css e resposividade

--- a/jobdelas/src/main/resources/static/css/card_criarpostagem.css
+++ b/jobdelas/src/main/resources/static/css/card_criarpostagem.css
@@ -1,6 +1,6 @@
 .cardCriarPostagem {
     width: 100%;
-    background-color: #ffffff;
+    background-color: var(--branco);
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -15,28 +15,28 @@
   }
 
   .card-body h3 {
-    color: #B378FF;
+    color: var(--rosa-primario);
     font-size: 1.4rem;
   }
 
   button {
-    background-color: #B378FF !important;
+    background-color: var(--rosa-primario) !important;
     cursor:pointer;
-    border: 1px solid white !important;
+    border: 1px solid var(--branco) !important;
 }
 
 button:hover {
   background: linear-gradient(to bottom, #B378FF 75%, #ffffff00 25%) !important;
-  border: 1px solid #B378FF !important;
-  outline: 1px solid #B378FF;
-  text-shadow: 1px 1px 2px #9254DE;
+  border: 1px solid var(--branco) !important;
+  outline: 1px solid var(--branco);
+  text-shadow: 1px 1px 2px var(--rosa-secundario);
 
 }
 
   .btn-primary {
     background: linear-gradient(to bottom, #B378FF 75%, #ffffff00 25%) !important;
-    border: 1px solid #B378FF !important;
-    color: #ffffff;
+    border: 1px solid var(--rosa-primario) !important;
+    color: var(--branco);
     font-weight: 600;
     font-size: 1.2rem;
     border-radius: 10px;
@@ -45,8 +45,8 @@ button:hover {
 
  
   .btn-primary:hover {
-    background: #B378FF !important;
-    border: 1px solid #B378FF;
-    outline: 1px solid #B378FF;
+    background: var(--rosa-primario) !important;
+    border: 1px solid var(--rosa-primario);
+    outline: 1px solid var(--rosa-primario);
 
 }
