--- a/jobdelas/src/main/resources/templates/jobdelas/aprendizado/cursos.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/aprendizado/cursos.html
@@ -19,7 +19,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/utils.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/card_infoaprendizado.css" />
     <link rel="stylesheet" href="/css/cursos.css" />
