--- a/jobdelas/src/main/resources/templates/jobdelas/usuario/perfil.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/usuario/perfil.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/utils.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/profile_header.css" />
     <link rel="stylesheet" href="/css/profile_body_sobre.css" />
