--- a/jobdelas/src/main/resources/static/css/jbcompany-empresas.css
+++ b/jobdelas/src/main/resources/static/css/jbcompany-empresas.css
@@ -25,7 +25,7 @@ body {
 
 .cointaner-principal {
   width: 90%;
-  height: 600px;
+  height: 700px;
   display: flex;
   border-radius: 30px 0px 0px 30px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
@@ -405,8 +405,6 @@ select#status_vaga {
 
 /* Area cursos - Listar Cursos */
 
-
-
 .titulo-curso {
   text-align: center;
   color: #fff;
@@ -423,3 +421,73 @@ select#status_vaga {
   text-align: center;
 }
 /* Fim area cursos - listar cursos */
+
+/* Estilos padrão para dispositivos maiores */
+.logo img {
+  max-width: 100%;
+}
+
+.cards-escolha-jbcompany {
+  text-align: center;
+}
+
+.cards-escolha-jbcompany h1 {
+  font-size: 24px;
+}
+
+.cards-escolha-jbcompany button {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+/* Media queries para dispositivos menores */
+@media (max-width: 767px) {
+  .logo img {
+    max-width: 80%; 
+  }
+
+  .cards-escolha-jbcompany h1 {
+    font-size: 18px;
+  }
+
+  .cards-escolha-jbcompany button {
+    width: 100%;
+  }
+}
+
+.cointaner-principal {
+  max-width: 1200px; 
+  width: 80%; 
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .cointaner-principal {
+    width: 90%; 
+    overflow: auto; 
+  }
+  .form_corpo {
+    width: 100%; 
+    padding: 10px; 
+  }
+  .empresa label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  .empresa input,
+  .empresa textarea,
+  .empresa select {
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    padding: 8px;
+  }
+  #botao-formulario {
+    width: 100%; 
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    padding: 10px;
+  }
+}
