--- a/jobdelas/src/main/resources/templates/jobdelas/cadastro.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/cadastro.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="/css/utils.css">
     <link rel="icon" href="/img/iconehtml.png" type="image/x-icon" />
     <title>Cadastro</title>
   </head>
