--- a/jobdelas/src/main/resources/templates/jobdelas/vagas/vagas.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/vagas/vagas.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/header.css" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/utils.css" />
     <link rel="stylesheet" href="/css/vagas.css" />
 
     <title>Vagas</title>
