--- a/jobdelas/src/main/resources/static/css/card_criarpostagem.css
+++ b/jobdelas/src/main/resources/static/css/card_criarpostagem.css
@@ -50,3 +50,13 @@ button:hover {
     outline: 1px solid var(--rosa-primario);
 
 }
+
+.caixa-criarpostagem {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  resize: vertical;
+  min-height: 150px;
+}
