--- a/jobdelas/src/main/resources/templates/jobdelas/usuario/perfil.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/usuario/perfil.html
@@ -31,7 +31,22 @@
   <body>
     <header class="header"></header>
     <main>
-      <section class="profile_header"></section>
+      <section class="profile_header">
+        <div class="profile_foto">
+          <img
+            src="/img/iconfoto.png"
+            alt="Imagem do Usuário"
+            class="img-fluid rounded-circle"
+          />
+          <h1 th:text="${usuarioLogado.nome}"></h1>
+          <p>Descrição do Usuário</p>
+        </div>
+        <div class="profile_redesociais">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
+      </section>
       <section class="profile_body">
         <div class="profile_sobre"></div>
         <div class="profile_educacao"></div>
