--- a/jobdelas/src/main/resources/templates/jobdelas/index.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/index.html
@@ -55,7 +55,7 @@
           </div>
           <button
             id="btnAdicionarTarefa"
-            class="botao_criarpostagem"
+            class="botao_criartarefa"
             data-toggle="modal"
             data-target="#tarefaModal"
           >
@@ -127,12 +127,7 @@
                 <button class="comment-button">
                   <i class="fas fa-comment"></i> Comentar
                 </button>
-                <!-- <a
-                  th:href="@{/jobdelas/comentarios/{postId}(postId=${postagem.id})}"
-                  >Learn</a
-                > -->
-
-                <button onclick="exibirComentarios()">
+                <button class="comment-button">
                   <i class="fas fa-eye"></i> Ler Comentários
                 </button>
               </div>
