--- a/jobdelas/src/main/resources/templates/jobdelas/index.html
+++ b/jobdelas/src/main/resources/templates/jobdelas/index.html
@@ -61,6 +61,65 @@
           >
             Adicionar Tarefa
           </button>
+          <div
+            class="modal fade"
+            id="tarefaModal"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="tarefaModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="tarefaModalLabel">
+                    Adicionar Tarefa
+                  </h5>
+                  <button
+                    type="button"
+                    class="close"
+                    data-dismiss="modal"
+                    aria-label="Fechar"
+                  >
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form
+                    id="formAdicionarTarefa"
+                    action="/tarefas/cadastrar"
+                    method="post"
+                  >
+                    <div class="form-group">
+                      <label for="titulo">Título:</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="titulo"
+                        name="titulo"
+                        placeholder="Digite o título da tarefa"
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="descricao">Descrição:</label>
+                      <textarea
+                        class="form-control"
+                        id="descricao"
+                        name="descricao"
+                        rows="3"
+                        placeholder="Digite a descrição da tarefa"
+                        required
+                      ></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">
+                      Enviar Tarefa
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="container_postagem">
